--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/node": "^25.1.0",
     "axios": "^1.13.4",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "mongoose": "^9.1.5",
     "telegraf": "^4.16.3",
