--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.4.1",
+    "@prisma/client": "^7.4.1",
     "@types/node": "^25.1.0",
     "axios": "^1.13.4",
     "csv-parser": "^3.2.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.3",
-    "mongoose": "^9.1.5",
+    "pg": "^8.19.0",
     "telegraf": "^4.16.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@telegraf/types": "^9.2.1",
-    "@types/mongoose": "^5.11.96"
+    "@types/mongoose": "^5.11.96",
+    "@types/pg": "^8.16.0",
+    "prisma": "^7.4.1"
   }
 }
